modified project structure

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="public/images/ABP4Y3.jpg" alt="" style="width: 40%; height: 50%;">
+                    <img src="img/ABP4Y3.jpg" alt="" style="width: 40%; height: 50%;">
                 </div>
                 <div class="carousel-item">
-                    <img src="public/images/AXHNJP.jpg" alt="" style="width: 40%; height: 50%;">
+                    <img src="img/AXHNJP.jpg" alt="" style="width: 40%; height: 50%;">
                 </div>
                 <div class="carousel-item">
-                    <img src="public/images/GRE8DC.jpg" alt="" style="width: 40%; height: 50%;">
+                    <img src="img/GRE8DC.jpg" alt="" style="width: 40%; height: 50%;">
                 </div>
                 <div class="carousel-item">
-                    <img src="public/images/M45JPW.jpg" alt="" style="width: 40%; height: 50%;">
+                    <img src="img/M45JPW.jpg" alt="" style="width: 40%; height: 50%;">
                 </div>
                 <div class="carousel-item">
-                    <img src="public/images/RKGDN0.jpg" alt="" style="width: 40%; height: 50%;">
+                    <img src="img/RKGDN0.jpg" alt="" style="width: 40%; height: 50%;">
                 </div>
             </div>
         
